--- a/vidly-api-backend/package.json
+++ b/vidly-api-backend/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "build": "rm -rf build && prettier --write source/ && tsc",
         "dev": "export NODE_ENV=development && ts-node-dev --respawn --transpile-only source/server.ts",
-        "test": "jest --watchAll --verbose --detectOpenHandles --coverage"
+        "test": "jest --watchAll --verbose --detectOpenHandles",
+        "test-coverage": "jest --watchAll --verbose --detectOpenHandles --coverage"
     },
     "keywords": [],
     "author": "",
